update theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /******************************************************************
-Theme Name: Making Comics
+Theme Name: Making Comics 2014
 Theme URI: https://bitbucket.org/luetkemj/makingcomics.com
 Description: Built with Bones for makingcomics.com
 Author: luetkemj
